# finlabair

./: .gitignore  README.md  main.py  pyproject.toml
docs/api/openbb/: setup.md
docs/setup/: uv.md
finlabair/data/: yahoo_fetcher.py
finlabair/utils/: validation.py
scripts/: class_portfolio.py  main.py  openbb_script.py  portfolio_performance.py  strategy.py
scripts/ai/: reinforcement_learning.py
scripts/openbb/: financials.py  price.py  stock_price.py
scripts/portfolio_performance/: main.py  portfolio_performance.py
scripts/portfolio_performance/strategy_random/: strategy.py
tests/: test_yahoo_fetcher.py
